# serializer version: 1
# name: test_all_entities[switch.test_automation-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_automation',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Test Automation',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Test Automation',
    'platform': 'abode',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'automation',
    'unique_id': '47fae27488f74f55b964a81a066c3a01',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_automation-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by goabode.com',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Automation',
      'type': 'CUE automation',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_automation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.test_switch-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_switch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'abode',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '0012a4d3614cb7e2b8c9abea31d2fb2a',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.test_switch-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by goabode.com',
      'battery_low': False,
      'device_id': 'ZW:0000000b',
      'device_type': 'Power Switch Sensor',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Switch',
      'no_response': False,
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
